# DecomposeTransformer

./: .gitignore  README.md  config.json  environment.yml  install.sh  pyproject.toml
Getting_Started/: CITI.py  Prune by CI with Head Pruning.py  Prune by CI(attention only).py  Prune by CI(feedforward only).py  Prune by CI.py  Prune by Generated samples.py  Prune by Head Pruning only.py  Prune by magnitude.py  Prune by wanda.py  head_prune.py  prune_wanda.py
Getting_Started/ipynb/: script.py
Getting_Started/ipynb/Generate examples/: Untitled-Copy1.ipynb  Untitled-Copy2.ipynb  Untitled-Copy3.ipynb  Untitled-Copy4.ipynb  Untitled.ipynb  script.py
Getting_Started/ipynb/Prune by CI with Head Pruning/: script.py
experiments/: Prune by CI with Head Pruning.py  Prune by CI(attention only).py  Prune by CI(feedforward only).py  Prune by CI.py  Prune by Generated samples.py  Prune by Head Pruning only.py  Prune by magnitude.py  Prune by wanda.py
experiments/ipynb/: script.py
experiments/ipynbs/: script.py  temp.py
scripts/: CITI_imdb.sh  CITI_osdg.sh
src/models/: cca_core.py  evaluate.py  train.py
src/pruning/: propagate.py  prune.py  prune_head.py
src/utils/: __init__.py  data_class.py  helper.py  load.py  perturb.py  sampling.py
utils/: config.json  helper.py  torchtest.py
utils/dataset_utils/: dataset.py  load_dataset.py  perturb.py  sampling.py
utils/decompose_utils/: concern_modularization.py
utils/model_utils/: CKA.py  cca_core.py  evaluate.py  load_model.py  propagate.py  save_module.py
utils/prune_utils/: prune.py  prune_head.py
(+1255 files in other folders)
