[tool.poetry]
name = "decomposetransformer"
version = "0.1.0"
description = ""
authors = ["hemaher0 <hemahero@naver.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
torch = "^2.4.1"
huggingface = "^0.0.1"
transformers = "^4.45.1"
numpy = "^2.1.1"
notebook = "^7.2.2"
tqdm = "^4.66.5"
colorama = "^0.4.6"
torchvision = "^0.19.1"
scikit-learn = "^1.5.2"
black = "^24.8.0"
datasets = "^3.0.1"
papermill = "^2.6.0"
chardet = "^5.2.0"
ipywidgets = "^8.1.5"
matplotlib = "^3.9.2"


[tool.poetry.group.dev.dependencies]
black = {extras = ["jupyter"], version = "^24.8.0"}
ipywidgets = "^8.1.5"
jupyter = "^1.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
